トップページだけ初期状態ではヘッダーを非表示 25.01.19

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -196,6 +196,10 @@ a:hover {
 	margin-top: 2.5rem;
 }
 
+.top-header {
+	opacity: 0;
+}
+
 .top-information {
 	padding-bottom: 5.25rem;
 	padding-top: 5.25rem;
@@ -1502,7 +1506,6 @@ a:hover {
 	background-color: rgba(13, 41, 54, 0.68);
 	height: 5rem;
 	left: 0;
-	opacity: 0; /* 初期状態では非表示 */
 	position: fixed;
 	top: 0;
 	transition: opacity 2s ease;
