--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1370,8 +1370,9 @@ a:hover {
 	position: relative;
 }
 
-.footer__logo {
+.footer__logo-link {
 	aspect-ratio: 120/45;
+	display: block;
 	overflow: hidden;
 	width: 7.5rem;
 }
@@ -4153,7 +4154,7 @@ html {
 	gap: 2.5rem;
 }
 
-.footer__logo {
+.footer__logo-link {
 	aspect-ratio: 200/75;
 	width: 12.5rem;
 }
