ハンバーガー：div → buttonへ変更 25.05.07

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1431,8 +1431,10 @@ a {
 }
 
 .hamburger {
+	border: none;
 	cursor: pointer;
 	height: 2rem;
+	padding: 0;
 	position: absolute;
 	right: 0.875rem;
 	top: 1.4375rem;
@@ -1444,6 +1446,7 @@ a {
 	background-color: #fff;
 	height: 0.0625rem;
 	position: absolute;
+	right: 0;
 	transition: transform 0.3s;
 	width: inherit;
 }
