--- a/src/sass/page/_top-about.scss
+++ b/src/sass/page/_top-about.scss
@@ -1,12 +1,9 @@
 @use "global" as *;
 
-// ローディング最初の画面が出ないようにするため、余白をmargin-top → padding-topへ変更
 .top-about {
-  padding-top: rem(83);
-  padding-bottom: rem(74);
+  margin-top: rem(83);
 
   @include mq(md) {
-    padding-top: rem(139);
-    padding-bottom: rem(164);
+    margin-top: rem(139);
   }
 }
