--- a/src/sass/page/_top-information.scss
+++ b/src/sass/page/_top-information.scss
@@ -1,14 +1,10 @@
 @use "global" as *;
 
 .top-information {
-  // ローディング最初の画面が出ないようにするため、余白を.top-aboutのpadding-bottomで指定
-  // margin-top: rem(74);
-  padding-top: rem(84);
-  padding-bottom: rem(84);
+  margin-top: rem(74);
+  
 
   @include mq(md) {
-    // margin-top: rem(164);
-    padding-top: rem(100);
-    padding-bottom: rem(76);
+    margin-top: rem(164);
   }
 }
