--- a/src/sass/page/_top-campaign.scss
+++ b/src/sass/page/_top-campaign.scss
@@ -1,10 +1,9 @@
 @use "global" as *;
 
-// ローディング最初の画面が出ないようにするため、余白をmargin-top → padding-topへ変更
 .top-campaign {
-  padding-top: rem(44);
+  margin-top: rem(44);
 
   @include mq(md) {
-    padding-top: rem(120);
+    margin-top: rem(120);
   }
 }
