--- a/src/sass/page/_top-footer.scss
+++ b/src/sass/page/_top-footer.scss
@@ -1,26 +1,21 @@
 @use "global" as *;
 
 .top-footer {
-  // ローディング最初の画面が出ないようにするため、余白を.top-contactのpadding-bottomで指定
-  // margin-top: rem(104);
-  padding-top: rem(48);
-  padding-bottom: rem(56);
+  margin-top: rem(104);
 
   @include mq(md) {
-    // margin-top: rem(160);
-    padding-top: rem(80);
-    padding-bottom: rem(80);
+    margin-top: rem(160);
   }
 }
 
-.top-footer--contact-page {
+.top-footer.top-footer--contact-page {
   margin-top: rem(148);
   @include mq(md) {
-    margin-top: rem(177);
+    margin-top: rem(164);
   }
 }
 
-.top-footer--thanks-page {
+.top-footer.top-footer--thanks-page {
   margin-top: rem(143);
   @include mq(md) {
     margin-top: rem(120);
