ボタン：モディファイヤーの詳細度アップ 25.07.19

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -665,7 +665,7 @@ a {
 	z-index: 1;
 }
 
-.button--reverse {
+.button.button--reverse {
 	background-color: #fff;
 	color: #408F95;
 }
@@ -682,7 +682,7 @@ a {
 	z-index: -1;
 }
 
-.button--reverse::before {
+.button.button--reverse::before {
 	border-color: #fff;
 }
 
@@ -700,7 +700,7 @@ a {
 	z-index: -1;
 }
 
-.button--reverse::after {
+.button.button--reverse::after {
 	background-color: #408F95;
 }
 
@@ -709,7 +709,7 @@ a {
 	position: relative;
 }
 
-.button__text--reverse {
+.button__text.button__text--reverse {
 	left: -1.75rem;
 }
 
@@ -725,7 +725,7 @@ a {
 	width: 2.5rem;
 }
 
-.button__text--reverse::after {
+.button__text.button__text--reverse::after {
 	right: -3.375rem;
 }
 
@@ -3488,7 +3488,7 @@ a:hover {
 	opacity: 1;
 }
 
-.button--reverse:hover {
+.button.button--reverse:hover {
 	color: #fff;
 }
 
