--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -17,7 +17,7 @@
   cursor: pointer;
 }
 
-.button--reverse {
+.button.button--reverse {
   background-color: $white;
   color: $greenaccent;
 }
@@ -34,7 +34,7 @@
   border: rem(1) solid $greenaccent;
 }
 
-.button--reverse::before {
+.button.button--reverse::before {
   border-color: $white;
 }
 
@@ -52,7 +52,7 @@
   transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
 }
 
-.button--reverse::after {
+.button.button--reverse::after {
   background-color: $greenaccent;
 }
 
@@ -63,7 +63,7 @@
     opacity: 1;
   }
 
-  .button--reverse:hover {
+  .button.button--reverse:hover {
     color: $white;
   }
 
@@ -78,7 +78,7 @@
   left: rem(-24);
 }
 
-.button__text--reverse {
+.button__text.button__text--reverse {
   left: rem(-28);
 }
 
@@ -94,7 +94,7 @@
   transform: skew(48deg);
 }
 
-.button__text--reverse::after {
+.button__text.button__text--reverse::after {
   right: rem(-54);
 }
 
