ハンバーガー：フォーカス時のoutline指定 25.07.19

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1406,6 +1406,10 @@ a {
 	z-index: 100;
 }
 
+.hamburger:focus {
+	outline: 0.125rem solid #391E88;
+}
+
 .hamburger span {
 	background-color: #fff;
 	height: 0.0625rem;
