--- a/src/sass/module/_tab.scss
+++ b/src/sass/module/_tab.scss
@@ -119,3 +119,10 @@
     background-image: url(../images/common/fish-icon_2-white.svg);
   }
 }
+
+.tab__cards {
+  margin-top: rem(16);
+  @include mq(md) {
+    margin-top: rem(24);
+  }
+}
