--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -886,7 +886,6 @@ a {
 }
 
 .campaign-category {
-	background-color: #fff;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem 1.3125rem;
@@ -900,13 +899,12 @@ a {
 	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1.571;
-	max-width: 10.125rem;
 	padding: 0.375rem 0.25rem 0.25rem;
 	position: relative;
 	text-align: center;
 	text-transform: uppercase;
-	transition: 0.3s ease;
-	width: 100%;
+	transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+	width: calc((100% - 1.3125rem) / 2);
 }
 
 .campaign-category__link.is-active {
@@ -3943,6 +3941,10 @@ html {
 	width: 100%;
 }
 
+.campaign-category__link {
+	width: 10.125rem;
+}
+
 .campaign-list {
 	gap: 5rem 2.5rem;
 	grid-template-columns: repeat(2, 1fr);
@@ -5049,15 +5051,6 @@ html {
 
 html {
 	font-size: 4.2666666667vw;
-}
-
-}
-
-@media (max-width: 374px) {
-
-.campaign-category {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
 }
 
 }
