--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -2745,6 +2745,7 @@ a {
 	font-weight: 400;
 	line-height: 1.44;
 	padding: 0.625rem 0;
+	position: relative;
 	text-align: center;
 	text-transform: uppercase;
 }
@@ -3594,7 +3595,7 @@ html {
 }
 
 .top-page-information {
-	margin-top: 9.375rem;
+	margin-top: 9.3125rem;
 }
 
 .top-page-price {
@@ -4717,14 +4718,18 @@ html {
 }
 
 .tab__item {
+	align-items: center;
+	display: flex;
 	font-size: 1.5rem;
-	padding: 1.8125rem 1.875rem 1.625rem 6.375rem;
-	position: relative;
+	gap: 0.5rem;
+	justify-content: center;
+	padding: 0.8125rem 0.1875rem 0.8125rem 0.1875rem;
 }
 
 .tab__item:nth-child(2) {
-	padding-left: 5.625rem;
-	padding-right: 1.125rem;
+	gap: 0.5625rem;
+	padding-bottom: 0.875rem;
+	padding-top: 0.75rem;
 }
 
 .tab__item::before {
@@ -4733,9 +4738,6 @@ html {
 	background-size: contain;
 	content: "";
 	height: 4rem;
-	left: 1.875rem;
-	position: absolute;
-	top: 0.8125rem;
 	width: 4rem;
 }
 
@@ -4746,7 +4748,6 @@ html {
 .tab__item:nth-child(2)::before {
 	background-image: url(../images/common/fish-icon_1.svg);
 	height: 3.9375rem;
-	left: 1.125rem;
 	width: 3.9375rem;
 }
 
@@ -4776,6 +4777,14 @@ html {
 
 .tab__item:nth-child(3).is-active::before {
 	background-image: url(../images/common/fish-icon_2-white.svg);
+}
+
+.tab__item span {
+	padding-top: 0.3125rem;
+}
+
+.tab__item:nth-child(2) span {
+	padding-top: 0.375rem;
 }
 
 .tab__cards {
