--- a/src/sass/page/_layout-pagenavi.scss
+++ b/src/sass/page/_layout-pagenavi.scss
@@ -1,13 +1,13 @@
 @use "global" as *;
 
-.top-pagenavi {
+.layout-pagenavi {
   margin-top: rem(78);
   @include mq(md) {
     margin-top: rem(80);
   }
 }
 
-.top-pagenavi.top-pagenavi--voice-page {
+.layout-pagenavi.layout-pagenavi--voice-page {
   margin-top: rem(79);
   @include mq(md) {
     margin-top: rem(72);
