--- a/src/sass/page/_layout-page-about.scss
+++ b/src/sass/page/_layout-page-about.scss
@@ -1,8 +1,7 @@
 @use "global" as *;
 
-.top-page-faq {
-  margin-top: rem(51);
-
+.layout-page-about {
+  margin-top: rem(52);
   @include mq(md) {
     margin-top: rem(149);
   }
