--- a/src/sass/page/_layout-page-contact.scss
+++ b/src/sass/page/_layout-page-contact.scss
@@ -1,7 +1,8 @@
 @use "global" as *;
 
-.top-page-about {
-  margin-top: rem(52);
+.layout-page-contact {
+  margin-top: rem(50);
+
   @include mq(md) {
     margin-top: rem(149);
   }
