--- a/src/sass/page/_layout-page-faq.scss
+++ b/src/sass/page/_layout-page-faq.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.top-page-information {
-  margin-top: rem(120);
+.layout-page-faq {
+  margin-top: rem(51);
 
   @include mq(md) {
     margin-top: rem(149);
