--- a/src/sass/page/_layout-page-information.scss
+++ b/src/sass/page/_layout-page-information.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.top-page-contact {
-  margin-top: rem(50);
+.layout-page-information {
+  margin-top: rem(120);
 
   @include mq(md) {
     margin-top: rem(149);
